syntax = "proto3";

option go_package = "./pb";
import "chat.proto";

package pb;

message PushMsgReq {
  pbChat.MsgData msgData = 2;
  repeated string pushToUserID = 3;
}
message PushMsgResp{
  int32   ResultCode = 1;
}
service msgPushService {
  rpc PushMsg(PushMsgReq) returns (PushMsgResp);
}